[package]
name = "which"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust implementation of the 'which' command-line utility"
license = "MIT"
repository = "https://github.com/yourusername/which-rs"
keywords = ["which", "cli", "command-line", "utility"]
categories = ["command-line-utilities"]

[features]
default = []
git = []

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.39.2", features = ["serialize"] }

[build-dependencies]
vergen = { version = "8.3.2", features = ["git", "gitcl"] }
