[package]
name = "rust-which"
version = "0.1.5"
edition = "2024"
authors = ["vdhewei <vdhewei@github.com>"]
description = "A Rust implementation of the 'which' command-line utility with multi-filesystem support"
license = "MIT"
repository = "https://github.com/VDHewei/which.rs"
keywords = ["which", "cli", "utility", "filesystem", "wasm"]
categories = ["command-line-utilities", "filesystem", "wasm"]

[[bin]]
name = "which"
path = "src/main.rs"

[lib]
name = "which"
path = "src/lib.rs"

[features]
default = ["native"]
native = []
wasm = ["wasm-bindgen", "js-sys"]
git = []

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.39.2", features = ["serialize"] }
rayon = "1.10"
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
regex = "1.11"
atty = "0.2"

[build-dependencies]
vergen-gitcl = { version = "9.1.0", features = ["build", "cargo", "rustc", "si"] }
anyhow = "1.0.102"
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
